changes/3.15/df1efc2d3037334f4a868aca9ae329d67058bbfd
net: bnx2x: include irq.h for irqreturn_t definitions

The bnx2x driver fails to build on ARM with:

In file included from drivers/net/ethernet/broadcom/bnx2x/bnx2x_link.c:28:0:
drivers/net/ethernet/broadcom/bnx2x/bnx2x_cmn.h:243:1: error: unknown type name 'irqreturn_t'
 irqreturn_t bnx2x_msix_sp_int(int irq, void *dev_instance);
 ^
drivers/net/ethernet/broadcom/bnx2x/bnx2x_cmn.h:251:1: error: unknown type name 'irqreturn_t'
 irqreturn_t bnx2x_interrupt(int irq, void *dev_instance);
 ^

Nothing in bnx2x_link.c or bnx2x_cmn.h is explicitly including the irq
definitions, so we add an include of linux/irq.h to pick them up.

Signed-off-by: Josh Boyer <jwboyer@fedoraproject.org>
Signed-off-by: David S. Miller <davem@davemloft.net>

